Archive2/4b/ace5d99f4d3c8f/output
main.cpp:19:26: warning: multi-character character constant [-Wmultichar]
  while (str[compteur] != '/0'){// calcul de la taille de str
                          ^
main.cpp:29:19: warning: multi-character character constant [-Wmultichar]
  while (tab[i] != '/0'){ // on parcourt la chaine de caractère
                   ^
main.cpp: In function 'char* SumCharsAndDigits(const char*)':
main.cpp:25:18: warning: ISO C++ forbids variable length array 'tab' [-Wvla]
  char* tab[taille];
                  ^
main.cpp:29:19: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
  while (tab[i] != '/0'){ // on parcourt la chaine de caractère
                   ^
main.cpp:31:17: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
    if (tab[i]<= '0' || tab[i] >= '9'){
                 ^
main.cpp:31:34: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
    if (tab[i]<= '0' || tab[i] >= '9'){
                                  ^
main.cpp:33:17: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
     if (tab[i]<='a' || tab[i] >= 'z'){ // si le caractère n'est pas entre a et z
                 ^
main.cpp:33:34: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
     if (tab[i]<='a' || tab[i] >= 'z'){ // si le caractère n'est pas entre a et z
                                  ^
main.cpp:37:21: error: invalid conversion from 'char*' to 'char' [-fpermissive]
      value = tab[i] - 'a';
                     ^
main.cpp:40:12: error: invalid conversion from 'char' to 'char*' [-fpermissive]
     tab[i] = value; // on change la valeur des caractères : éléments de ascii vers valeur alphabet
            ^
main.cpp: In function 'char* MajToMin(const char*)':
main.cpp:51:7: warning: address of local variable 'value' returned [-Wreturn-local-addr]
  char value;
       ^
main.cpp:51:7: warning: address of local variable 'value' returned [-Wreturn-local-addr]
